[package]
name = "actix-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1.29.1", features = ["full"] }
tokio-postgres = "0.7.6" 
deadpool-postgres = "0.10.5"
derive_more = "0.99.17"
env_logger = "0.10.0"
log = "0.4.19"
